@@ -238,6 +238,8 @@ x2goserver (4.1.0.4-0x2go1.2) UNRELEASED; urgency=medium
       and silence others.
     - X2Go/Server/Agent/NX/Options.pm: grammar/typo fix in comment and improve
       a different comment.
+    - X2Go/Server/Agent/NX/Options.pm: avoid copying arrays if not necessary
+      when passing to grep and map operations.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
